--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -102,6 +102,7 @@ li {
 
 p {
   text-align: justify;
+  color:var(--title-color);
 }
 
 .btn {
@@ -131,11 +132,11 @@ p {
 }
 
 .btn--primary span {
-  color: var(--primary-color);
+  color: var(--title-color);
 }
 
 .btn--primary {
-  border: 1px solid var(--primary-color);
+  border: 1px solid var(--title-color);
 }
 
 .menu__item {
@@ -158,3 +159,181 @@ p {
   text-transform: uppercase;
   color: var(--text-color);
 }
+
+/********  **********/
+main,
+.about,
+.education,
+.projects,
+.contact {
+  padding: 2.5rem 1rem;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+/** Sobre Mim **/
+.about {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  border-top: 1px solid #333;
+  border-bottom: 1px solid #333;
+  background-color: #e1e1e1;
+}
+
+.about__content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 2rem;
+}
+
+.about__photo {
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+  object-position: center;
+  pointer-events: none;
+  border-radius: 50rem;
+  border: 1px solid var(--primary-color);
+}
+
+.about__description {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 1.5rem;
+}
+
+
+/** Meus Projetos **/
+
+.projects {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  border-top: 1px solid #333;
+  border-bottom: 1px solid #333;
+  background-color: #e1e1e1;
+}
+
+.projects__container {
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
+}
+
+.projects__card {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.card__cover {
+  width: 100%;
+  border-radius: 0.5rem;
+  object-fit: cover;
+  object-position: center;
+}
+
+.card__body {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-start;
+  gap: 1rem;
+}
+
+.card__description {
+  color:var(--title-color);
+}
+
+.card__list,
+.about__list {
+  margin-left: 1.25rem;
+}
+
+.card__item,
+.about__item {
+  list-style: disc;
+   color:var(--title-color);
+}
+
+.card__buttons,
+.description__buttons {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+}
+
+.card__buttons .btn {
+  padding: 0.65rem 1.25rem;
+}
+
+.card__buttons .btn span {
+  font-size: 1rem;
+}
+
+.card__body .technologies__list {
+  gap: 0.75rem;
+}
+
+.card__body .technologies__item {
+  width: 4rem;
+  height: 4rem;
+}
+
+.card__body .technologies__logo {
+  height: 2rem;
+}
+
+.projects .btn {
+  width: auto;
+  margin: auto;
+}
+
+/** Technologies **/
+.technologies__list {
+  display: flex;
+  flex-flow: row wrap;
+  gap: 0.5rem;
+}
+
+.technologies__item {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 4.8rem;
+  height: 4.8rem;
+  aspect-ratio: 1/1;
+  border: 1px solid #9a9a9c;
+  border-radius: 50rem;
+}
+
+.technologies__logo {
+  height: 2.4rem;
+}
+
+/** Footer **/
+footer { 
+  background-color: var(--secondary-bg-color);
+}
+
+footer p {
+  font-size: .875rem;
+  text-align: center;
+  padding: 1rem;
+    color: var(--text-color);
+}
+
+
+
+
+
+
