--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -102,7 +102,7 @@ li {
 
 p {
   text-align: justify;
-  color:var(--title-color);
+  color: var(--title-color);
 }
 
 .btn {
@@ -210,7 +210,6 @@ main {
   gap: 1.5rem;
 }
 
-
 /** Meus Projetos **/
 
 .projects {
@@ -250,7 +249,7 @@ main {
 }
 
 .card__description {
-  color:var(--title-color);
+  color: var(--title-color);
 }
 
 .card__list,
@@ -261,7 +260,7 @@ main {
 .card__item,
 .about__item {
   list-style: disc;
-   color:var(--title-color);
+  color: var(--title-color);
 }
 
 .card__buttons,
@@ -321,19 +320,14 @@ main {
 }
 
 /** Footer **/
-footer { 
+footer {
   background-color: var(--secondary-bg-color);
 }
 
 footer p {
-  font-size: .875rem;
+  font-size: 0.875rem;
   text-align: center;
   padding: 1rem;
-    color: var(--text-color);
+  color: var(--text-color);
+  text-align: justify;
 }
-
-
-
-
-
-
