--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@200;400&display=swap");
+
 :root {
   --primary-color: #f0f0f0;
 
@@ -18,17 +21,14 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /*list-style: none;
-  scrollbar-width: thin;
-  scrollbar-color: var(--secondary-bg-color) transparent;*/
 }
 
 body {
   background: var(--primary-bg-color);
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   color: var(--text-color);
   min-height: 100vh;
   line-height: 1.6;
+  font-family: "Inter", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 /** header **/
@@ -52,7 +52,6 @@ nav ul li a:hover {
   background-color: var(--nav-hover-color);
   border-radius: 3px;
 }
-
 
 ul {
   list-style: none;
@@ -93,7 +92,7 @@ h3 {
 }
 
 h4 {
-  color: var(--primary-color);
+  color: var(--title-color);
   font-weight: 400;
   font-size: 1.15rem;
   text-align: left;
@@ -102,7 +101,7 @@ h4 {
 h1,
 h2,
 h3 {
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-family: "League Spartan", Tahoma, Geneva, Verdana, sans-serif;
   text-transform: uppercase;
   color: var(--title-color);
   font-weight: 200;
@@ -186,10 +185,12 @@ main {
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  flex-grow: 1;
 }
 
-/** Sobre Mim **/
-.about {
+/** Sobre  Mim e Educação **/
+.about,
+.education {
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
@@ -198,7 +199,8 @@ main {
   background-color: #e1e1e1;
 }
 
-.about__content {
+.about__content,
+.education__content {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -225,6 +227,39 @@ main {
 
 .about__description p {
   color: var(--title-color);
+}
+
+/** Educação **/
+
+.education__content {
+  justify-content: center;
+  align-items: center;
+}
+
+.education__content span {
+  color: var(--title-color);
+}
+.education__icons {
+  display: flex;
+  align-items: center;
+  gap: 0.85rem;
+}
+
+.education__icons i {
+  font-size: 1.25rem;
+}
+
+.education__content .col {
+  display: flex;
+  flex-direction: column;
+  text-align: justify;
+  gap: 2rem;
+}
+
+.education__content .col .row {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
 
 /** Meus Projetos **/
@@ -336,6 +371,8 @@ main {
   height: 2.4rem;
 }
 
+
+
 /* Back to Top Button **/
 .top-arrow {
   display: block;
@@ -387,7 +424,6 @@ main {
     opacity: 1;
     display: block;
     transition: 0.75 ease;
-
   }
 
   3% {
@@ -414,9 +450,6 @@ main {
     width: 100%;
   }
 }
-
-
-
 
 /** Footer **/
 footer {
